--- a/enterWorkouts.html
+++ b/enterWorkouts.html
@@ -5,14 +5,14 @@
       <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/vue"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
-      <link rel="stylesheet" type="text/css" href="styles/index.css">
+      <link rel="stylesheet" type="text/css" href="styles/enterWorkouts.css">
       </title>
    </head>
    <body >
       <div id='app'>
          <button id='hw' v-on:click='onPressed'> {{test}} </p>
       </div>
-      <script src="js/index.js"></script>
+      <script src="js/enterWorkouts.js"></script>
 
    </body>
 </html>
