--- a/index.html
+++ b/index.html
@@ -6,11 +6,23 @@
       <script src="https://cdn.jsdelivr.net/npm/vue"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
       <link rel="stylesheet" type="text/css" href="styles/index.css">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/tharlon.css">
+      <link href='https://fonts.googleapis.com/css?family=Tienne' rel='stylesheet'>
       </title>
    </head>
    <body >
       <div id='app'>
-         
+         <div id='topBar'>
+            <div id="topBarText">
+               DailyFitnessTracker.com
+            </div>
+         </div>
+         <div id='sideBar'>
+            <div class='sideBarButtons'>My Profile</div>
+            <div class='sideBarButtons'>View Rewards</div>
+            <div class='sideBarButtons'>View Progress</div>
+            <div class='sideBarButtons'>Help</div>
+         </div>
       </div>
       <script src="js/index.js"></script>
 
