--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/vue"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
       <link rel="stylesheet" type="text/css" href="styles/index.css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/tharlon.css">
       <link href='https://fonts.googleapis.com/css?family=Tienne' rel='stylesheet'>
@@ -18,11 +19,13 @@
             </div>
          </div>
          <div id='sideBar'>
-            <div class='sideBarButtons'>My Profile</div>
-            <div class='sideBarButtons'>View Rewards</div>
-            <div class='sideBarButtons'>View Progress</div>
-            <div class='sideBarButtons'>Help</div>
+            <button class='sideBarButtons'>My Profile</button>
+            <button class='sideBarButtons'>View Rewards</button>
+            <button class='sideBarButtons'>View Progress</button>
+            <button class='sideBarButtons'>Help</button>
          </div>
+         <div id='barChartBackground'></div>
+         <canvas id="leaderboardChart"></canvas>
       </div>
       <script src="js/index.js"></script>
 
