Added enter exercise button and made some small style changes to size of leaderboard chart and font color

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
          </div>
          <div id='barChartBackground'></div>
          <canvas id="leaderboardChart"></canvas>
+         <button id='enterExerciseButton'>Click to Enter Exercise!</button>
       </div>
       <script src="js/index.js"></script>
 
