--- a/rewards.html
+++ b/rewards.html
@@ -6,13 +6,55 @@
       <script src="https://cdn.jsdelivr.net/npm/vue"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
       <link rel="stylesheet" type="text/css" href="styles/index.css">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+      <link rel="stylesheet" type="text/css" href="styles/rewards.css">
       </title>
    </head>
    <body >
-      <div id='app'>
-         <button id='hw' v-on:click='onPressed'> {{test}} </p>
+      <div id='reward-app'>
+         <div id='topBar'>
+            <div id='tipBarText'>
+               DailyFitnessTracker.com
+            </div>
+         </div>
+         <div id='pageContents'>
+            <div id='sideBar'>
+               <button class='sideBarButtons'>My Profile</button>
+               <button class='sideBarButtons'>View Rewards</button>
+               <button class='sideBarButtons'>View Progress</button>
+               <button class='sideBarButtons'>Help</button>
+            </div>
+            <div id='rewardsPage'>
+               <div id='rewardsInfo'>
+                  <input id='rewardsQuery' type="text" class='form-control' placeholder="Search rewards..." aria-label="Search rewards...">
+                  <div class="dropdown">
+                     <button class="btn btn-info dropdown-toggle" type="button" data-toggle="dropdown" style="margin-bottom:2px;">Sort rewards by:
+                     <span class="caret"></span></button>
+                     <ul class="dropdown-menu">
+                        <li><a href="#">Reset to original</a></li>
+                        <li><a href="#">Collection Name</a></li>
+                        <li><a href="#">Price</a></li>
+                     </ul>
+                  </div>
+                  <div id='pointCounter'>
+                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-bicycle" viewBox="0 0 16 16">
+                     <path d="M4 4.5a.5.5 0 0 1 .5-.5H6a.5.5 0 0 1 0 1v.5h4.14l.386-1.158A.5.5 0 0 1 11 4h1a.5.5 0 0 1 0 1h-.64l-.311.935.807 1.29a3 3 0 1 1-.848.53l-.508-.812-2.076 3.322A.5.5 0 0 1 8 10.5H5.959a3 3 0 1 1-1.815-3.274L5 5.856V5h-.5a.5.5 0 0 1-.5-.5zm1.5 2.443-.508.814c.5.444.85 1.054.967 1.743h1.139L5.5 6.943zM8 9.057 9.598 6.5H6.402L8 9.057zM4.937 9.5a1.997 1.997 0 0 0-.487-.877l-.548.877h1.035zM3.603 8.092A2 2 0 1 0 4.937 10.5H3a.5.5 0 0 1-.424-.765l1.027-1.643zm7.947.53a2 2 0 1 0 .848-.53l1.026 1.643a.5.5 0 1 1-.848.53L11.55 8.623z"/>
+                     </svg>
+                     <span>137</span>
+                  </div>
+               </div>
+               <div id='rewardsGrid'>
+                  <div v-for='(reward, index) in rewards'>
+                     <reward-entry
+                     :flipped="reward"
+                     ></reward-entry>
+                  </div>
+               </div>
+            </div>
+         </div>
+         
       </div>
-      <script src="js/index.js"></script>
+      <script src="js/rewards.js"></script>
 
    </body>
 </html>
