--- a/rewards.html
+++ b/rewards.html
@@ -8,12 +8,14 @@
       <link rel="stylesheet" type="text/css" href="styles/index.css">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
       <link rel="stylesheet" type="text/css" href="styles/rewards.css">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/tharlon.css">
+      <link href='https://fonts.googleapis.com/css?family=Tienne' rel='stylesheet'>
       </title>
    </head>
    <body >
       <div id='reward-app'>
          <div id='topBar'>
-            <div id='tipBarText'>
+            <div id='topBarText'>
                DailyFitnessTracker.com
             </div>
          </div>
