--- a/rewards.html
+++ b/rewards.html
@@ -21,8 +21,8 @@
          </div>
          <div id='pageContents'>
             <div id='sideBar'>
+               <button class='sideBarButtons'>Homepage</button>
                <button class='sideBarButtons'>My Profile</button>
-               <button class='sideBarButtons'>View Rewards</button>
                <button class='sideBarButtons'>View Progress</button>
                <button class='sideBarButtons'>Help</button>
             </div>
