Replaced my profile button on profile page with Homepage button

--- a/profile.html
+++ b/profile.html
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div id='sideBar'>
-            <button class='sideBarButtons'>My Profile</button>
+            <button class='sideBarButtons'>Homepage</button>
             <button class='sideBarButtons'>View Rewards</button>
             <button class='sideBarButtons'>View Progress</button>
             <button class='sideBarButtons'>Help</button>
