Added page navigation. Clicking on sidebar buttons for existing pages navigates pages

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             </div>
          </div>
          <div id='sideBar'>
-            <button class='sideBarButtons'>My Profile</button>
-            <button class='sideBarButtons'>View Rewards</button>
+            <button class='sideBarButtons' onclick="toProfilePage()">My Profile</button>
+            <button class='sideBarButtons' onclick="toRewardsPage()">View Rewards</button>
             <button class='sideBarButtons'>View Progress</button>
             <button class='sideBarButtons'>Help</button>
          </div>
