--- a/profile.html
+++ b/profile.html
@@ -22,9 +22,10 @@
             </div>
         </div>
         <div id='sideBar'>
-            <button class='sideBarButtons'>Homepage</button>
-            <button class='sideBarButtons'>View Rewards</button>
-            <button class='sideBarButtons'>View Progress</button>
+            <button class='sideBarButtons' onclick="toHomepage()">Homepage</button>
+            <button class='sideBarButtons' onclick="toEnterWorkoutsPage()">Enter Exercise</button>
+            <button class='sideBarButtons' onclick="toRewardsPage()">View Rewards</button>
+            <button class='sideBarButtons' onclick="toProfilePage()">My Profile</button>
             <button class='sideBarButtons'>Help</button>
         </div>
         <div id='profile' style="display: block; position: relative; margin-left: 220px; margin-top: 2%;">
