--- a/rewards.html
+++ b/rewards.html
@@ -22,9 +22,9 @@
          </div>
          <div id='pageContents'>
             <div id='sideBar'>
-               <button class='sideBarButtons'>Homepage</button>
-               <button class='sideBarButtons'>My Profile</button>
-               <button class='sideBarButtons'>View Progress</button>
+               <button class='sideBarButtons' onclick="toHomepage()">Homepage</button>
+               <button class='sideBarButtons' onclick="toProfilePage()">My Profile</button>
+               <button class='sideBarButtons' onclick="toEnterWorkoutsPage()">Enter Exercise</button>
                <button class='sideBarButtons'>Help</button>
             </div>
             <div id='rewardsPage'>
