--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
          </div>
          <div id='barChartBackground'></div>
          <canvas id="leaderboardChart"></canvas>
-         <button id='enterExerciseButton'>Click to Enter Exercise!</button>
+         <button id='enterExerciseButton' onclick="toEnterWorkoutsPage()">Click to Enter Exercise!</button>
       </div>
       <script src="js/index.js"></script>
 
