fake db working

--- a/enterWorkouts.html
+++ b/enterWorkouts.html
@@ -46,6 +46,6 @@
             
          </div>
       </div>
-      <script type="module" src="js/enterWorkouts.js" defer></script>
+      <script src="js/enterWorkouts.js" defer></script>
    </body>
 </html>
