--- a/profile.html
+++ b/profile.html
@@ -26,7 +26,7 @@
             <button class='sideBarButtons' onclick="toEnterWorkoutsPage()">Enter Exercise</button>
             <button class='sideBarButtons' onclick="toRewardsPage()">View Rewards</button>
             <button class='sideBarButtons' onclick="toProfilePage()">My Profile</button>
-            <button class='sideBarButtons'>Help</button>
+            <button class='sideBarButtons' onclick="toSettingsPage()">Settings</button>
         </div>
         <div id='profile' style="display: block; position: relative; margin-left: 220px; margin-top: 2%;">
             <div id="headerPhotoBox">
