--- a/rewards.html
+++ b/rewards.html
@@ -25,7 +25,7 @@
                <button class='sideBarButtons' onclick="toHomepage()">Homepage</button>
                <button class='sideBarButtons' onclick="toProfilePage()">My Profile</button>
                <button class='sideBarButtons' onclick="toEnterWorkoutsPage()">Enter Exercise</button>
-               <button class='sideBarButtons'>Help</button>
+               <button class='sideBarButtons' onclick="toSettingsPage()">Settings</button>
             </div>
             <div id='rewardsPage'>
                <div id='rewardsInfo'>
