Changed style of enter exercises page to match other pages. Also added navigation to the enter exercises page.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
          </div>
          <div id='sideBar'>
             <button class='sideBarButtons' onclick="toProfilePage()">My Profile</button>
+            <button class='sideBarButtons' onclick="toEnterWorkoutsPage()">Enter Exercise</button>
             <button class='sideBarButtons' onclick="toRewardsPage()">View Rewards</button>
-            <button class='sideBarButtons'>View Progress</button>
             <button class='sideBarButtons' onclick="toSettingsPage()">Settings</button>
          </div>
          <div id='barChartBackground'></div>
