--- a/settings.html
+++ b/settings.html
@@ -21,10 +21,9 @@
          </div>
          <div id='sideBar'>
             <button class='sideBarButtons' onclick="toHomepage()">Homepage</button>
+            <button class='sideBarButtons' onclick="toEnterWorkoutsPage()">Enter Exercise</button>
             <button class='sideBarButtons' onclick="toProfilePage()">My Profile</button>
             <button class='sideBarButtons' onclick="toRewardsPage()">View Rewards</button>
-            <button class='sideBarButtons'>View Progress</button>
-            <button class='sideBarButtons'>Help</button>
         </div>
         <div id="settingsBody">
             <div id="settings" class="settingsText">Settings</div>
