--- a/enterWorkouts.html
+++ b/enterWorkouts.html
@@ -6,6 +6,9 @@
       <script src="https://cdn.jsdelivr.net/npm/vue"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" >
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
       <link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/tharlon.css">
       <link href='https://fonts.googleapis.com/css?family=Tienne' rel='stylesheet'>
       <link rel="stylesheet" type="text/css" href="styles/index.css">
@@ -31,11 +34,14 @@
             </div>
             <div id="data">
                <div id='enterData'>
-                  <div class='dataparent'>
-                     <p class='datachild'> Workout Type </p>
-                     <input id='workouttype' class='datachild' type="text" v-model="workoutType">
-                     <p class='datachild'> {{workoutType}} </p>
-                  </div>
+                  <div class="dropdown">
+                     <button class="btn btn-secondary dropdown-toggle" type="button" id="exerciseDropdownButton" data-bs-toggle="dropdown" aria-expanded="false">
+                      {{exerciseSelected}}
+                     </button>
+                     <ul class="dropdown-menu" aria-labelledby="exerciseDropdownButton">
+                      <li v-for="exercise in listOfExercisesKeys" v-on:click='selectExercise(exercise)'><a class="dropdown-item" href="#">{{exercise}}</a></li>
+                     </ul>
+                   </div>
                   <div class='dataparent'>
                      <p class='datachild'>Weight</p>
                      <input id='weight' type="text" v-model="weight">
@@ -66,6 +72,7 @@
             
          </div>
       </div>
+      <script type="text/javascript" src="exercises.js"></script>
       <script src="js/index.js" defer></script>
    </body>
 </html>
