Fixed small error with index.js reading a file not defined by putting the js file holding exercise lists into each html as an extra script

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
          <button id='enterExerciseButton' onclick="toEnterWorkoutsPage()">Click to Enter Exercise!</button>
          <img id="settingsGearImg" src="img/settings-gears.jpg" onclick="toSettingsPage()">
       </div>
+      <script type="text/javascript" src="exercises.js"></script>
       <script src="js/index.js"></script>
 
    </body>
