--- a/profile.html
+++ b/profile.html
@@ -68,6 +68,7 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript" src="exercises.js"></script>
     <script src="js/index.js"></script>
 </body>
 
