--- a/rewards.html
+++ b/rewards.html
@@ -57,6 +57,7 @@
          </div>
          
       </div>
+      <script type="text/javascript" src="exercises.js"></script>
       <script src="js/index.js"></script>
 
    </body>
