Added minutes entering box. Database now tracks minutes when arePointsPerMinute for the exercise is true and always tracks points earned for the exercise

--- a/enterWorkouts.html
+++ b/enterWorkouts.html
@@ -58,6 +58,11 @@
                      <p class='datachild'> {{sets}} sets </p>
                   </div>
                   <div class='dataparent'>
+                     <p class='datachild'>Number of Minutes</p>
+                     <input id='numberminutes' type="text" v-model="minutes">
+                     <p class='datachild'> {{minutes}} minutes </p>
+                  </div>
+                  <div class='dataparent'>
                      <p class='datachild'> {{date}} </p>
                   </div>
                   <div>
