--- a/enterWorkouts.html
+++ b/enterWorkouts.html
@@ -52,6 +52,11 @@
                      <input id='numberreps' type="text" v-model="reps">
                      <p class='datachild'> {{reps}} reps </p>
                   </div>
+                  <!-- <div class='dataparent'>
+                     <p class='datachild'>Number of Minutes</p>
+                     <input id='numberminutes' type="text" v-model="reps">
+                     <p class='datachild'> {{minutes}} minutes </p>
+                  </div> -->
                   <div class='dataparent'>
                      <p class='datachild'>Number of Sets</p>
                      <input id='numbersets' type="text" v-model="sets">
