Volume slider now remembers the volume value previously set even when you switch pages

--- a/settings.html
+++ b/settings.html
@@ -13,7 +13,7 @@
       </title>
    </head>
    <body >
-      <div id='app'>
+      <div id='settings-app'>
          <div id='topBar'>
             <div id="topBarText">
                DailyFitnessTracker.com
