--- a/enterWorkouts.html
+++ b/enterWorkouts.html
@@ -16,7 +16,7 @@
       </title>
    </head>
    <body>
-      <div id='app'>
+      <div id='exercise-app'>
          <div id='topBar'>
             <div id="topBarText">
                DailyFitnessTracker.com
