Added favicon and sounds

--- a/profile.html
+++ b/profile.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="styles/profile.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/tharlon.css">
     <link href='https://fonts.googleapis.com/css?family=Tienne' rel='stylesheet'>
+    <link rel="icon" type="image/x-icon" href="/img/icons8-done-48.png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 </head>
 
