--- a/enterWorkouts.html
+++ b/enterWorkouts.html
@@ -13,6 +13,7 @@
       <link href='https://fonts.googleapis.com/css?family=Tienne' rel='stylesheet'>
       <link rel="stylesheet" type="text/css" href="styles/index.css">
       <link rel="stylesheet" type="text/css" href="styles/enterWorkouts.css">
+      <link rel="icon" type="image/x-icon" href="/img/icons8-done-48.png">
       </title>
    </head>
    <body>
