--- a/settings.html
+++ b/settings.html
@@ -10,7 +10,7 @@
       <link rel="stylesheet" type="text/css" href="styles/settings.css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/tharlon.css">
       <link href='https://fonts.googleapis.com/css?family=Tienne' rel='stylesheet'>
-      <link rel="icon" type="image/x-icon" href="/img/icons8-done-48.png">
+      <link rel="icon" type="image/x-icon" href="/img/chartFavicon.png">
       </title>
    </head>
    <body >
