--- a/rewards.html
+++ b/rewards.html
@@ -10,7 +10,7 @@
       <link rel="stylesheet" type="text/css" href="styles/rewards.css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/tharlon.css">
       <link href='https://fonts.googleapis.com/css?family=Tienne' rel='stylesheet'>
-      <link rel="icon" type="image/x-icon" href="/img/icons8-done-48.png">
+      <link rel="icon" type="image/x-icon" href="/img/chartFavicon.png">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
       </title>
